--- a/index.html
+++ b/index.html
@@ -94,9 +94,10 @@
     <!-- Services Section -->
     <section id="video">
         <div class="container">
-            <iframe width="600" height="345" align="middle"
-                src="https://player.vimeo.com/video/133238180">
-            </iframe>
+            <div align="center">
+                <iframe width="600" height="345" src="https://player.vimeo.com/video/133238180">
+                </iframe>
+            </div>
         </div>
     </section>
 
@@ -104,9 +105,13 @@
     <section id="overview">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">Services</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                <div class="col-lg-12">
+                    <h2 class="section-heading">Overview</h2>
+                    <p class="text-muted">
+                        Understanding the travel patterns is key to design personalized travel recommendation and to improve local tourism business. <br>             
+                        Thanks to the availability of <b>call detail records (CDR) data </b> during tourism seasons in 2014, we are able to analyze the <b>location-time series </b> of more than 20000 aanonymized cell phone users in Andorra, a counntry bordering Spain and France. <br> 
+                        <b>Topics we are trying to explore are:</b>
+                    </p>
                 </div>
             </div>
             <div class="row text-center">
@@ -115,16 +120,16 @@
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-shopping-cart fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">E-Commerce</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Tourist Behaviors</h4>
+                    <p class="text-muted">How travel patterns differ in different subpopulations of tourists and during different time of the year</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
                         <i class="fa fa-laptop fa-stack-1x fa-inverse"></i>
                     </span>
-                    <h4 class="service-heading">Responsive Design</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <h4 class="service-heading">Route Prediction</h4>
+                    <p class="text-muted">Whether it is possible to predict a tourist's future route choice based on their own or their group's travel history</p>
                 </div>
                 <div class="col-md-4">
                     <span class="fa-stack fa-4x">
@@ -132,7 +137,7 @@
                         <i class="fa fa-lock fa-stack-1x fa-inverse"></i>
                     </span>
                     <h4 class="service-heading">Web Security</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
+                    <p class="text-muted">Develop a better targeted tourist attraction recommendation system, based on potential places of interest for each traveler</p>
                 </div>
             </div>
         </div>
@@ -142,8 +147,8 @@
     <section id="analysis">
         <div class="container">
             <div class="row">
-                <div class="col-lg-12 text-center">
-                    <h2 class="section-heading">About</h2>
+                <div class="col-lg-12">
+                    <h2 class="section-heading">Analysis</h2>
                     <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
                 </div>
             </div>
