--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     </p>
                 </div>
             </div>
-            <div class="row text-center">
+            <div class="row text-center sep">
                 <div class="col-sm-4">
                     <span class="fa-stack fa-4x">
                         <i class="fa fa-circle fa-stack-2x text-primary"></i>
@@ -146,32 +146,42 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h2 class="section-heading">Analysis</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <p class="text-muted">
+                        What are the most important groups of tourists visiting Andorra? And at what time do they usually visit this country? The answer to these questions are important for identifying the appropriete target group of our recommendation system, as well as launching the system at the appropriete time.
+                    </p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row sep">
                 <div class="col-lg-12">
                     <h4>Traveler groups</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                    <p class="text-muted">
+                        What are the most important groups of tourists visiting Andorra? And at what time do they usually visit this country? The answer to these questions are important for identifying the appropriete target group of our recommendation system, as well as launching the system at the appropriete time. 
+                        We plotted the number of cell phone users in this region over the entire 9 month period, aggregating them by their nationalities. Apparently, the general trend follows a stable weekly cycle throughout the time, and some variations happening during holiday seasons (winter and summer) and festivals (e.g. Easter). Spanish and French are the two main groups of travellers.
+                    </p>
                 </div>
                 <div class="">
                     <img src="img/analysis/generaltrend.png" class="img-responsive">
                 </div>
             </div>
-            <div class="row">
+            <div class="row sep">
                 <div class="">
                     <h4>Group behavior comparison</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                    <p class="text-muted">
+                        How much different these two main groups of tourists are from each other? Do they natually form two different clusters in terms of route choice? We are interested in undersdandint this question because if nationality is closely related to route choice, the recommendation efficacy would be largely increased just because we know a person's natinality. Here we plotted the number of long term versus short term visitors from each of the two categories, as well as their choice of cities to visit. As we can tell, Spanish short-term visitors usually choose city 0 and city 1, only long-term visitors would go to city 4,5,6. On the other hand, French people are more likely to pay a longger visit, and one-day visitors would almost certainly choose city 6, whereas long-term visitors would choose other cities, too.
+                    </p>
                 </div>
                 <div class="">
                     <img src="img/analysis/oneday.png" class="img-responsive col-sm-6">
                     <img src="img/analysis/14day.png" class="img-responsive col-sm-6">
                 </div>
             </div>
-            <div class="row">
+            <div class="row sep">
                 <div class="">
                     <h4>Probing into Location and Sequence</h4>
-                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur.</p>
+                    <p class="text-muted">
+                        Taking into considerations of the spatial layour of these cities, we found out that Spanish visitors concentrate in the southwest area, whereas French people concentrate in the city on the northeast. By overlaying a time sequence analysis on top of that, we discovered that most Spanish tourists arrive at city 0 first and are very likely to go back to stay in city 0 until they leave. However for the French visitors, they arrive at city 6 (northeastern), but in most cases would move on the the next city shortly after that. <br>
+                        Based on the exploratory analysis, we found it may be possible to carry out a prediction on a person's next location based on their previous travel history, as well as their nationality.
+                    </p>
                 </div>
                 <div class="">
                     <img src="img/analysis/route.png" class="img-responsive col-sm-6">
@@ -259,10 +269,10 @@
             <div class="row">
                 <div class="col-lg-12 ">
                     <h2 class="section-heading">Prediction</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <p class="text-muted">Click on one of the thumbnails to see interactive maps of predicted next locations</p>
                 </div>
             </div>
-            <div class="row">
+            <div class="row sep">
                 <div class="col-sm-4 col-sm-6 portfolio-item">
                     <a href="AsFestival/AssocMapFestival.html" class="portfolio-link" data-toggle="modal">
                         <div class="portfolio-hover">
