--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
     <section id="video">
         <div class="container">
             <div align="center">
-                <iframe width="600" height="345" src="https://player.vimeo.com/video/133238180">
+                <iframe width=100% height=520 src="https://player.vimeo.com/video/133238180">
                 </iframe>
             </div>
         </div>
@@ -155,6 +155,15 @@
             </div>
             <div class="row sep">
                 <div class="col-lg-12">
+                    <h4>Places, and activities</h4>
+                    <p class="text-muted">
+                        We first carried out an exploratory analysis by mapping out twitter data related to travel activities. This allows us to identify places of interest as well as what types of events they are associated with.
+                    </p>
+                    <iframe width=100% height=520 frameborder=0 src=https://andorratwitter.cartodb.com/viz/0faad100-76ee-11e5-9f89-0ef7f98ade21/embed_map allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+                </div>             
+            </div>
+            <div class="row sep">
+                <div class="col-lg-12">
                     <h4>Traveler groups</h4>
                     <p class="text-muted">
                         What are the most important groups of tourists visiting Andorra? And at what time do they usually visit this country? The answer to these questions are important for identifying the appropriete target group of our recommendation system, as well as launching the system at the appropriete time. 
@@ -166,29 +175,48 @@
                 </div>
             </div>
             <div class="row sep">
-                <div class="">
-                    <h4>Group behavior comparison</h4>
-                    <p class="text-muted">
-                        How much different these two main groups of tourists are from each other? Do they natually form two different clusters in terms of route choice? We are interested in undersdandint this question because if nationality is closely related to route choice, the recommendation efficacy would be largely increased just because we know a person's natinality. Here we plotted the number of long term versus short term visitors from each of the two categories, as well as their choice of cities to visit. As we can tell, Spanish short-term visitors usually choose city 0 and city 1, only long-term visitors would go to city 4,5,6. On the other hand, French people are more likely to pay a longger visit, and one-day visitors would almost certainly choose city 6, whereas long-term visitors would choose other cities, too.
-                    </p>
+                <div class="row sep">
+                    <div class="col-lg-12">
+                        <h4>Group behavior comparison</h4>
+                        <p class="text-muted">
+                            How much different these two main groups of tourists are from each other? Do they natually form two different clusters in terms of route choice? We are interested in undersdandint this question because if nationality is closely related to route choice, the recommendation efficacy would be largely increased just because we know a person's natinality. Here we plotted the number of long term versus short term visitors from each of the two categories, as well as their choice of cities to visit. As we can tell, Spanish short-term visitors usually choose city 0 and city 1, only long-term visitors would go to city 4,5,6. On the other hand, French people are more likely to pay a longger visit, and one-day visitors would almost certainly choose city 6, whereas long-term visitors would choose other cities, too.
+                        </p>
+                        <img src="img/analysis/oneday.png" class="img-responsive col-sm-6">
+                        <img src="img/analysis/14day.png" class="img-responsive col-sm-6">
+                    </div>
                 </div>
-                <div class="">
-                    <img src="img/analysis/oneday.png" class="img-responsive col-sm-6">
-                    <img src="img/analysis/14day.png" class="img-responsive col-sm-6">
+                <div class="row sep">
+                    <div class="col-lg-12">
+                        <p class="text-muted">
+                            Within each country, we looked further into internal variations of traveling styles. We implemented K-Means classification on days spent on each city for each traveler, and plotted the 8 possible different styles. 
+                        </p>
+                        <img src="img/analysis/kmeanssp.png" class="img-responsive col-sm-6">
+                        <img src="img/analysis/kmeansfr.png" class="img-responsive col-sm-6">
+                    </div>
                 </div>
             </div>
             <div class="row sep">
-                <div class="">
-                    <h4>Probing into Location and Sequence</h4>
-                    <p class="text-muted">
-                        Taking into considerations of the spatial layour of these cities, we found out that Spanish visitors concentrate in the southwest area, whereas French people concentrate in the city on the northeast. By overlaying a time sequence analysis on top of that, we discovered that most Spanish tourists arrive at city 0 first and are very likely to go back to stay in city 0 until they leave. However for the French visitors, they arrive at city 6 (northeastern), but in most cases would move on the the next city shortly after that. <br>
-                        Based on the exploratory analysis, we found it may be possible to carry out a prediction on a person's next location based on their previous travel history, as well as their nationality.
-                    </p>
+                <div class="row sep">
+                    <div class="col-lg-12">
+                        <h4>Probing into Location and Sequence</h4>
+                        <p class="text-muted">
+                            Taking into considerations of the spatial layour of these cities, we found out that Spanish visitors concentrate in the southwest area, whereas French people concentrate in the city on the northeast. By overlaying a time sequence analysis on top of that, we discovered that most Spanish tourists arrive at city 0 first and are very likely to go back to stay in city 0 until they leave. However for the French visitors, they arrive at city 6 (northeastern), but in most cases would move on the the next city shortly after that. <br>
+                            Based on the exploratory analysis, we found it may be possible to carry out a prediction on a person's next location based on their previous travel history, as well as their nationality.
+                        </p>
+                        <img src="img/analysis/route.png" class="img-responsive col-sm-6">
+                        <img src="img/analysis/cities.png" class="img-responsive col-sm-6">
+                    </div>
                 </div>
-                <div class="">
-                    <img src="img/analysis/route.png" class="img-responsive col-sm-6">
-                    <img src="img/analysis/cities.png" class="img-responsive col-sm-6">
+                <div class="row sep">
+                    <div class="col-lg-12">
+                        <p class="text-muted">
+                            Incorporating the results with a TripAdvisor comments dataset, we were able to identify the most popular places for Spanish and French tourists. Not surprsingly, the locations of popular places highly correspond to the frequency and duration of visit for people from these two countries.  
+                        </p>
+                        <iframe width=100% height=520 frameborder=0 src=https://andorratwitter.cartodb.com/viz/97932766-9d54-11e5-a42b-0e787de82d45/embed_map allowfullscreen webkitallowfullscreen mozallowfullscreen oallowfullscreen msallowfullscreen></iframe>
+                        <img src="img/analysis/popsp.png" class="img-responsive col-sm-6">
+                        <img src="img/analysis/popfr.png" class="img-responsive col-sm-6">
 
+                    </div>
                 </div>
             </div>
             <!--
@@ -272,8 +300,8 @@
                 <div class="col-lg-12 ">
                     <h2 class="section-heading">Prediction</h2>
                     <p class="text-muted">
-                        We implemented random forrest algorithm ...<br>
-                        Click on one of the thumbnails to see interactive maps of predicted next locations
+                        we implemented a random forrest algorithm on this dataset, trying to predict a person's next location based on location-time series of his / her previous travel records. In addition to that, we implemented an association rule algorithm in order to figure out which other places people are likely to visit if they have already visited some cities.<br>
+                        <b>Click on one of the thumbnails to see interactive maps of predicted next locations</b>
                     </p>
                 </div>
             </div>
@@ -333,29 +361,28 @@
             <div class="row">
                 <div class="col-lg-12">
                     <h3 class="section-heading">Team</h3>
-                    <p class="text-muted">Lorem ipsum dolor sit amet consectetur.</p>
                 </div>
             </div>
             <div class="row">
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/1.jpg" class="img-responsive img-circle" alt="">
-                        <h5>Kay Garland</h5>
-                        <p class="text-muted">Lead Designer</p>
+                        <a href="https://www.linkedin.com/in/zhanlei-ye-8a6730a9">
+                        <img src="img/team/zhanlei ye.jpg" class="img-responsive img-circle" alt="">
+                        <h5>Zhanlei Ye</h5></a>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/2.jpg" class="img-responsive img-circle" alt="">
-                        <h5>Larry Parker</h5>
-                        <p class="text-muted">Lead Marketer</p>
+                        <a href="https://www.facebook.com/naichun?fref=ts">
+                        <img src="img/team/naichun chen.jpg" class="img-responsive img-circle" alt="">
+                        <h5>Naichun Chen</h5></a>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="team-member">
-                        <img src="img/team/3.jpg" class="img-responsive img-circle" alt="">
-                        <h5>Diana Pertersen</h5>
-                        <p class="text-muted">Lead Developer</p>
+                        <a href="https://www.linkedin.com/in/lezhi-li-aa56b876">
+                        <img src="img/team/lezhi li.jpg" class="img-responsive img-circle" alt="">
+                        <h5>Lezhi Li</h5></a>
                     </div>
                 </div>
             </div>
