--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Location Intelligence</title>
+    <title>cs109 - Location Intelligence</title>
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -80,7 +80,7 @@
     <header>
         <div class="container">
             <div class="intro-text">
-                <!-- <div class="intro-lead-in">Predicting travelers' route choice</div>-->
+                <!--<div class="intro-lead-in">CS109 final poroject</div>-->
                 <div class="intro-heading">Predicting travelers' route choice</div>
                 <a href="#video" class="page-scroll btn btn-xl">Tell Me More</a>
             </div>
@@ -91,7 +91,7 @@
     <section id="video">
         <div class="container">
             <div align="center">
-                <iframe width=100% height=520 src="https://player.vimeo.com/video/133238180">
+                <iframe width=100% height=540 src="http://www.youtube.com/embed/zO_ImVTlv6U"></iframe>
                 </iframe>
             </div>
         </div>
